Archive2/98/4df6900bd1ba8b/output
main.cpp:12:11: error: field of type 'C' has private default constructor
    T t = {};
          ^
main.cpp:20:12: note: in instantiation of template class 'foo<C>' requested here
    foo<C> f{42};
           ^
main.cpp:4:5: note: declared private here
    C() {}
    ^
1 error generated.
